--- a/categoria.html
+++ b/categoria.html
@@ -1,81 +1,90 @@
 <!doctype html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Konchi - Categoría</title>
-  <link href="styles.css?v=8" rel="stylesheet"/>
+  <link href="styles.css?v=11" rel="stylesheet" />
 </head>
+
 <body class="page-category">
 
-<header class="header" id="top">
-  <div class="container">
-    <div class="header__inner header__inner--centerLogo">
-      <button class="icon-btn icon-btn--square" onclick="window.location.href='index.html'" aria-label="Volver">←</button>
+  <header class="header" id="top">
+    <div class="container">
+      <div class="header__inner header__inner--centerLogo">
+        <button class="icon-btn icon-btn--square" onclick="window.location.href='index.html'"
+          aria-label="Volver">←</button>
 
-      <a class="brand brand--center" href="index.html" aria-label="Inicio">
-        <img class="brand__img" src="img/logotransparente.png" alt="Konchi" />
-      </a>
+        <a class="brand brand--center" href="index.html" aria-label="Inicio">
+          <img class="brand__img" src="img/logotransparente.png" alt="Konchi" />
+        </a>
 
-      <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
-        <span class="cart-ico" aria-hidden="true">
-  <?xml version="1.0" encoding="utf-8"?>
+        <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
+          <span class="cart-ico" aria-hidden="true">
+            <?xml version="1.0" encoding="utf-8"?>
 
-<svg width="800px" height="800px" viewBox="0 0 1024 1024" fill="#000000" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M800.8 952c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56z m-448 0c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56zM344 792c-42.4 0-79.2-33.6-84-76l-54.4-382.4-31.2-178.4c-2.4-19.2-19.2-35.2-37.6-35.2H96c-13.6 0-24-10.4-24-24s10.4-24 24-24h40.8c42.4 0 80 33.6 85.6 76l31.2 178.4 54.4 383.2C309.6 728 326.4 744 344 744h520c13.6 0 24 10.4 24 24s-10.4 24-24 24H344z m40-128c-12.8 0-23.2-9.6-24-22.4-0.8-6.4 1.6-12.8 5.6-17.6s10.4-8 16-8l434.4-32c19.2 0 36-15.2 38.4-33.6l50.4-288c1.6-13.6-2.4-28-10.4-36.8-5.6-6.4-12.8-9.6-21.6-9.6H320c-13.6 0-24-10.4-24-24s10.4-24 24-24h554.4c22.4 0 42.4 9.6 57.6 25.6 16.8 19.2 24.8 47.2 21.6 75.2l-50.4 288c-4.8 41.6-42.4 74.4-84 74.4l-432 32c-1.6 0.8-2.4 0.8-3.2 0.8z" fill="" /></svg>
-</span>
-        <span class="cart-badge" id="cartCount">0</span>
-      </button>
+            <svg width="800px" height="800px" viewBox="0 0 1024 1024" fill="#000000" class="icon" version="1.1"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M800.8 952c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56z m-448 0c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56zM344 792c-42.4 0-79.2-33.6-84-76l-54.4-382.4-31.2-178.4c-2.4-19.2-19.2-35.2-37.6-35.2H96c-13.6 0-24-10.4-24-24s10.4-24 24-24h40.8c42.4 0 80 33.6 85.6 76l31.2 178.4 54.4 383.2C309.6 728 326.4 744 344 744h520c13.6 0 24 10.4 24 24s-10.4 24-24 24H344z m40-128c-12.8 0-23.2-9.6-24-22.4-0.8-6.4 1.6-12.8 5.6-17.6s10.4-8 16-8l434.4-32c19.2 0 36-15.2 38.4-33.6l50.4-288c1.6-13.6-2.4-28-10.4-36.8-5.6-6.4-12.8-9.6-21.6-9.6H320c-13.6 0-24-10.4-24-24s10.4-24 24-24h554.4c22.4 0 42.4 9.6 57.6 25.6 16.8 19.2 24.8 47.2 21.6 75.2l-50.4 288c-4.8 41.6-42.4 74.4-84 74.4l-432 32c-1.6 0.8-2.4 0.8-3.2 0.8z"
+                fill="" />
+            </svg>
+          </span>
+          <span class="cart-badge" id="cartCount">0</span>
+        </button>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<section class="section" id="catalogo">
-  <div class="container">
-    <div class="crumb" id="crumb"></div>
-    <div class="grid" id="productsGrid"></div>
-  </div>
-</section>
+  <section class="section" id="catalogo">
+    <div class="container">
+      <div class="crumb" id="crumb"></div>
+      <div class="grid" id="productsGrid"></div>
+    </div>
+  </section>
 
-<div class="modal" id="cartModal" aria-hidden="true">
-  <div class="modal__overlay" data-close="1"></div>
-  <div class="modal__card modal__card--cart" role="dialog" aria-modal="true" aria-label="Carrito">
-    <button class="modal__close" id="cartClose" aria-label="Cerrar">✕</button>
-    <div class="modal__body">
-      <div class="modal__title">Carrito</div>
-      <div class="cart" id="cartItems"></div>
-      <div class="cart__footer">
-        <div class="cart__total">Total: <strong id="cartTotal2">$0</strong></div>
-        <button class="btn btn--primary" id="cartCheckoutBtn">Enviar por WhatsApp</button>
+  <div class="modal" id="cartModal" aria-hidden="true">
+    <div class="modal__overlay" data-close="1"></div>
+    <div class="modal__card modal__card--cart" role="dialog" aria-modal="true" aria-label="Carrito">
+      <button class="modal__close" id="cartClose" aria-label="Cerrar">✕</button>
+      <div class="modal__body">
+        <div class="modal__title">Carrito</div>
+        <div class="cart" id="cartItems"></div>
+        <div class="cart__footer">
+          <div class="cart__total">Total: <strong id="cartTotal2">$0</strong></div>
+          <button class="btn btn--primary" id="cartCheckoutBtn">Enviar por WhatsApp</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="modal" id="productModal" aria-hidden="true">
-  <div class="modal__overlay" data-close="1"></div>
-  <div class="modal__card" role="dialog" aria-modal="true" aria-label="Detalle de producto">
-    <button class="modal__close" id="modalClose" aria-label="Cerrar">✕</button>
-    <div class="modal__img" id="modalImg"></div>
-    <div class="modal__body">
-      <div class="modal__title" id="modalTitle">Producto</div>
-      <div class="modal__price" id="modalPrice">$0</div>
-      <div class="modal__desc" id="modalDesc">Descripción...</div>
+  <div class="modal" id="productModal" aria-hidden="true">
+    <div class="modal__overlay" data-close="1"></div>
+    <div class="modal__card" role="dialog" aria-modal="true" aria-label="Detalle de producto">
+      <button class="modal__close" id="modalClose" aria-label="Cerrar">✕</button>
+      <div class="modal__img" id="modalImg"></div>
+      <div class="modal__body">
+        <div class="modal__title" id="modalTitle">Producto</div>
+        <div class="modal__price" id="modalPrice">$0</div>
+        <div class="modal__desc" id="modalDesc">Descripción...</div>
 
-      <div class="modal__qty">
-        <button class="qtybtn" id="modalQtyDec" type="button" aria-label="Restar">−</button>
+        <div class="modal__qty">
+          <button class="qtybtn" id="modalQtyDec" type="button" aria-label="Restar">−</button>
           <strong id="modalQtyVal">1</strong>
-        <button class="qtybtn" id="modalQtyInc" type="button" aria-label="Sumar">+</button>
-    </div>
+          <button class="qtybtn" id="modalQtyInc" type="button" aria-label="Sumar">+</button>
+        </div>
 
-      <button class="btn btn--primary" id="modalAddBtn">Agregar al carrito</button>
+        <button class="btn btn--primary" id="modalAddBtn">Agregar al carrito</button>
 
-      <div class="modal__extra" id="modalExtra"></div>
+        <div class="modal__extra" id="modalExtra"></div>
+      </div>
     </div>
   </div>
-</div>
 
-<script src="productos.js?v=9"></script>
-<script src="app.js?v=110"></script>
-<script src="categoria.js?v=10"></script>
+  <script src="productos.js?v=11"></script>
+  <script src="app.js?v=11"></script>
+  <script src="categoria.js?v=11"></script>
 </body>
+
 </html>
